{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 16,
  "lineage": "f6eecc7b-b835-f470-dec5-3b55f0037864",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "db_private1_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0e12b4547e627ffc0",
            "id": "rtb-0e12b4547e627ffc0",
            "owner_id": "680179888221",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "rt_private1"
            },
            "vpc_id": "vpc-0aab0c0eb1f2b25b2"
          },
          "depends_on": [
            "aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "db_private2_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0e12b4547e627ffc0",
            "id": "rtb-0e12b4547e627ffc0",
            "owner_id": "680179888221",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "rt_private2"
            },
            "vpc_id": "vpc-0aab0c0eb1f2b25b2"
          },
          "depends_on": [
            "aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2aa0c1ac0ef13d",
            "route_table_id": "rtb-0e12b4547e627ffc0",
            "subnet_id": "subnet-00b75d7ec6ec5a1f3"
          },
          "depends_on": [
            "aws_default_route_table.db_private1_rt",
            "aws_subnet.db_subnet_zone1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eea6926f8a018ba",
            "route_table_id": "rtb-0e12b4547e627ffc0",
            "subnet_id": "subnet-0369bd9c31c716e4a"
          },
          "depends_on": [
            "aws_default_route_table.db_private2_rt",
            "aws_subnet.db_subnet_zone2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680179888221:security-group/sg-041c285aac84f8293",
            "description": "Used for db instances",
            "egress": [],
            "id": "sg-041c285aac84f8293",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private_sg",
            "name_prefix": null,
            "owner_id": "680179888221",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0aab0c0eb1f2b25b2"
          },
          "depends_on": [
            "aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_zone1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680179888221:subnet/subnet-00b75d7ec6ec5a1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00b75d7ec6ec5a1f3",
            "map_public_ip_on_launch": false,
            "owner_id": "680179888221",
            "tags": {
              "name": "db_subnet_zone1"
            },
            "vpc_id": "vpc-0aab0c0eb1f2b25b2"
          },
          "depends_on": [
            "aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_zone2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680179888221:subnet/subnet-0369bd9c31c716e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0369bd9c31c716e4a",
            "map_public_ip_on_launch": false,
            "owner_id": "680179888221",
            "tags": {
              "name": "db_subnet_zone2"
            },
            "vpc_id": "vpc-0aab0c0eb1f2b25b2"
          },
          "depends_on": [
            "aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680179888221:vpc/vpc-0aab0c0eb1f2b25b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0112d1379bcd0e3c6",
            "default_route_table_id": "rtb-0e12b4547e627ffc0",
            "default_security_group_id": "sg-0a10ced6d255d4d08",
            "dhcp_options_id": "dopt-6730681c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aab0c0eb1f2b25b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e12b4547e627ffc0",
            "owner_id": "680179888221",
            "tags": {
              "name": "db_vpc"
            }
          }
        }
      ]
    }
  ]
}